# cocoon

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  git.cc.in  git.h
benchmark/: run-benchmark.sh  server.go  simple_translate.py  start-server.sh  test-invalid-json.txt  translate.py  translation_benchmark.py
cocoon-tl-utils/: CMakeLists.txt  cocoon-common-utils.hpp  cocoon-tl-utils.cpp  cocoon-tl-utils.hpp  parsers.cpp  parsers.hpp
docs/: README.md  architecture.md  deployment.md  gpu.md  ra-tls.md  seal-keys.md  smart-contracts.md  tdx-and-images.md
mt-tools/: pyproject.toml
mt-tools/scripts/: quality_eval.py  run_sglang.py  simple_translate.py  translation_benchmark.py
mt-tools/src/mt/: __init__.py  translate.py
net/: TcpClient.cpp  TcpClient.h  TcpClient.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpServer.h
reprodebian/: .gitignore  README.txt  fetch-deps.sh  mkosi.build  mkosi.conf  mkosi.finalize  mkosi.postinst  mkosi.postoutput  mkosi.prepare  mkosi.sync  qemu-launch  qemu-tdx-launch
reprodebian/checksums/: cuda.sha256  fuse-archive.sha256  intel.sha256  ovmf.sha256
reprodebian/cocoon-init/: README.md  cocoon-cert-refresh.service  cocoon-cert-refresh.timer  cocoon-docker.conf  cocoon-health.service  cocoon-init  cocoon-init.service  cocoon-prepare-spec  cocoon-ready.target  cocoon-render-config  cocoon-render-config-local  cocoon-render-ton-config  cocoon-render-ton-config-local  cocoon-sync-time  gen-cert-synced  mnt-spec.mount  spec.service
reprodebian/gpu_attest/: Pipfile  gpu_attest.py  tdx.sh
reprodebian/mkosi.profiles/: autologin.conf  autologin.postoutput
reprodebian/mkosi.skeleton/etc/systemd/network/: 99-wired-dhcp.network
reprodebian/mkosi.skeleton/etc/systemd/system/: nvidia-tdx.service
reprodebian/mkosi.skeleton/etc/systemd/system/nvidia-persistenced.service.d/: 10-cmdline.conf
reprodebian/mkosi.skeleton/var/lib/dkms/: mok.key  mok.pub
reprodebian/pkg-aux/: fuse-archive-blockdev.patch  genimage.conf  modules.allowlist  pccs-package-lock.json  rules.v4  rules.v6
runners/: BaseRunner.cpp  BaseRunner.hpp  ClientRunner.cpp  ProxyRunner.cpp  TonlibWrapper.cpp  TonlibWrapper.h  WorkerRunner.cpp
runners/client/: ClientProxyConnection.cpp  ClientProxyConnection.h  ClientProxyInfo.cpp  ClientProxyInfo.h  ClientRunner.cpp  ClientRunner.hpp  ClientRunningRequest.cpp  ClientRunningRequest.h  ClientStats.h
runners/helpers/: AmortCounter.h  CountTokens.cpp  CountTokens.hpp  HttpSender.cpp  HttpSender.hpp  SimpleJsonSerializer.hpp  Ton.h  ValidateRequest.cpp  ValidateRequest.h
runners/proxy/: OldProxyContract.cpp  OldProxyContract.hpp  ProxyClientInfo.cpp  ProxyClientInfo.h  ProxyConnectingClient.h  ProxyInboundClientConnection.cpp  ProxyInboundClientConnection.h  ProxyInboundConnection.cpp  ProxyInboundConnection.h  ProxyInboundWorkerConnection.cpp  ProxyInboundWorkerConnection.h  ProxyRunner.cpp  ProxyRunner.hpp  ProxyRunningRequest.cpp  ProxyRunningRequest.hpp  ProxySignedPayments.hpp  ProxyStats.h  ProxyWorkerConnectionInfo.cpp  ProxyWorkerConnectionInfo.h  ProxyWorkerInfo.cpp  ProxyWorkerInfo.h
runners/smartcontracts/: ClientContract.cpp  ClientContract.hpp  CocoonWallet.cpp  CocoonWallet.hpp  Opcodes.hpp  ProxyContract.cpp  ProxyContract.hpp  RootContractConfig.cpp  RootContractConfig.hpp  SmartContract.cpp  SmartContract.hpp  WorkerContract.cpp  WorkerContract.hpp
runners/utils/: generate-cocoon-wallet-address.cpp  sync_time.cpp
runners/worker/: WorkerProxyConnection.cpp  WorkerProxyConnection.h  WorkerProxyInfo.cpp  WorkerProxyInfo.h  WorkerRunner.cpp  WorkerRunner.h  WorkerRunningRequest.cpp  WorkerRunningRequest.hpp  WorkerStats.h  WorkerUplinkMonitor.cpp  WorkerUplinkMonitor.h
scripts/: .gitignore  build-image  build-model  client.conf  cocoon-launch  prepare-release  proxy.conf  setup-gpu-vfio  worker.conf
scripts/dist-worker/: README.md  proxy.conf.example  worker.conf.example
spec/: mainnet-base-ton-config.json
spec/fake-ton/: fake-ton-config.json  runtime.vars
spec/spec-client/: client-config.json
spec/spec-proxy/: cocoon-proxy-runner.service  cocoon-router.service  init  proxy-config.json
spec/spec-worker/: cocoon-router.service  cocoon-sglang.service  cocoon-vllm.service  cocoon-worker-runner.service  init  model.verity_hash  worker-config.json
tdport/: CMakeLists.txt
tdport/td/e2e/: Keys.cpp  Keys.h
tdport/td/net/: Socks5.cpp  Socks5.h  SslCtx.cpp  SslCtx.h  SslStream.cpp  SslStream.h  TransparentProxy.cpp  TransparentProxy.h  utils.cpp  utils.h
tee/: CMakeLists.txt  status_utils.h
tee/cocoon/: AttestationCache.cpp  AttestationCache.h  CertManager.cpp  CertManager.h  FwdProxy.cpp  FwdProxy.h  ProxyConfig.cpp  ProxyConfig.h  RevProxy.cpp  RevProxy.h  cocoon-subst.cpp  gen-cert.cpp  health-client.cpp  health-metrics.cpp  health-metrics.h  health-monitor.cpp  health-render.cpp  health-render.h  health-stats.cpp  health-stats.h  http-echo.py  openssl_utils.h  pow.cpp  pow.h  proxy-test.py  router.cpp  tdx-info.cpp  tdx.cpp  tdx.h  utils.cpp  utils.h
tee/sgx-enclave/: CMakeLists.txt  Enclave.config.xml  Enclave.cpp  Enclave.edl  common.h  seal-client.cpp  seal-server.cpp  sgx_utils.h
tee/test/: cocoon.cpp
test/: test-hello-world.cpp
tl/: CMakeLists.txt
tl/generate/: CMakeLists.txt  generate_common.cpp  tl_json_converter.cpp  tl_writer_cpp.cpp  tl_writer_h.cpp  tl_writer_hpp.cpp  tl_writer_td.cpp
tl/generate/scheme/: cocoon_api.tl  cocoon_api.tlo  update-tlo.sh
